--- a/patron/index.html
+++ b/patron/index.html
@@ -60,6 +60,8 @@
 
           <pre class="thin"></pre>
 
+          <p class="linebreak small"><sup>1</sup> Patron donation &ndash; including Debit or Credit card information &ndash; is processed with PayPal.<font class="fr">&nbsp;&#92;&nbsp;Votre don &ndash; incluant information de carte de d&eacute;bit ou de cr&eacute;dit &ndash; est accept&eacute; avec PayPal.</font></p>
+
           <p class="linebreak small">For a donation of more than CA$250 &ndash; and for secure wiring instructions &ndash; please contact the account office at Animat Habitat [<a href="mailto:account@animathabitat.org?subject=Donation" title="Address of the account office at Animat Habitat." target="_blank" rel="noopener">account&ndash;animathabitat.org</a>].<font class="fr">&nbsp;&#92;&nbsp;Pour un don de plus de 250 $ CA &ndash; et pour obtenir des instructions de virement s&eacute;curis&eacute; &ndash; veuillez contacter le bureau de compte chez Animat Habitat.</font></p>
 
         </div>
@@ -88,7 +90,7 @@
       <div class="clear diptych">
 
         <div class="clear-top">
-          <a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-57U63714MU8341144MNDAT2A" title="PayPal CA$250 / Periwinkle Blue Council at Animat Habitat." rel="noopener"><button>Periwinkle <font class="small">CA$250 /&nbsp;yr<sup>&nbsp;[1]</sup></font></button></a>
+          <a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-57U63714MU8341144MNDAT2A" title="PayPal CA$250 / Periwinkle Council at Animat Habitat." rel="noopener"><button>Periwinkle <font class="small">CA$250 /&nbsp;yr<sup>&nbsp;[1]</sup></font></button></a>
           <p class="linebreak">As a Periwinkle Council member, your donation will help fund research and development at Animat Habitat, and you will receive:<font class="fr">&nbsp;&#92;&nbsp;En tant que membre du Conseil Pervenche, votre don contribuera au financement de la recherche et du d&eacute;veloppement chez Animat Habitat, et vous recevrez&nbsp;:</font></p>
 
           <p class="linebreak"><i>All patron benefits plus&hellip;</i><font class="fr">&nbsp;&#92;&nbsp;<i>Tous les avantages des patrons plus&hellip;</i></font></p>
@@ -186,42 +188,13 @@
 
       </div>
 
-      <!-- <div class="clear" id="scene-two">
-
-        <div>
-          <p><font class="color-two">Scene two official selections.<font class="fr">&nbsp;&#92;&nbsp;S&eacute;lections officielles avec sc&egrave;ne deux.</font></font></p>
-
-        </div>
-
-        <div class="clear polyptych">
-
-          <div>
-            <a href="../url/-org/worldwildlife-tiger/" title="World Wide Fund for Nature / Adopt a Tiger" target="_blank" rel="noopener"><button>WWF &ndash; International</button></a>
-            <p class="linebreak lineend">Support global wildlife conservation projects at World Wide Fund for Nature.<font class="fr">&nbsp;&#92;&nbsp;Soutenez les projets mondiaux de conservation de la nature chez le Fonds mondial pour la nature.</font></p>
-          </div>
-
-        </div>
-
-      </div> -->
-
     </article><br class="clear">
   </section>
 
   <footer class="single">
-    <div class="quote" id="footnotes">
-      <p class="small"><sup>1</sup> Patron donation &ndash; including Debit or Credit card information &ndash; is processed with PayPal.<font class="fr">&nbsp;&#92;&nbsp;Votre don &ndash; incluant information de carte de d&eacute;bit ou de cr&eacute;dit &ndash; est accept&eacute; avec PayPal.</font></p>
-      <!-- <p class="small"><sup>2</sup> Patron benefits:<font class="fr">&nbsp;&#92;&nbsp;Les avantages des patrons&nbsp;:</font></p>
-      <div class="clear-top">
-        <ul class="small square">
-          <li>Certificate of Membership. (Annual)<font class="fr">&nbsp;&#92;&nbsp;Certificat d'adhésion. (&nbsp;Annuel&nbsp;)</font></li>
-          <li>Letters from the Editor and President. (Optional)<font class="fr">&nbsp;&#92;&nbsp;Lettres de l'éditeur et du pr&eacute;sident. (&nbsp;Optionnel&nbsp;)</font></li>
-          <li>Early access to beta programs, to exhibition passes and to limited edition prints.<font class="fr">&nbsp;&#92;&nbsp;Acc&egrave;s anticip&eacute; aux programmes b&ecirc;ta, aux billets d'exposition et aux tirages en &eacute;dition limit&eacute;e.</font></li>
+    <div class="quote">
 
-        </ul>
-
-      </div> -->
-
-      <p class="linebreak small">Please address any question about donations to the account office at Animat Habitat [<a href="mailto:account@animathabitat.org" title="Address of the account office at Animat Habitat." target="_blank" rel="noopener">account–animathabitat.org</a>].<font class="fr">&nbsp;&#92;&nbsp;Adressez toute question concernant les dons au bureau de compte chez Animat Habitat.</font></p>
+      <p class="small">Please address any question about donations to the account office at Animat Habitat [<a href="mailto:account@animathabitat.org" title="Address of the account office at Animat Habitat." target="_blank" rel="noopener">account–animathabitat.org</a>].<font class="fr">&nbsp;&#92;&nbsp;Adressez toute question concernant les dons au bureau de compte chez Animat Habitat.</font></p>
       <p class="linebreak small">Thank you for your support.<font class="fr">&nbsp;&#92;&nbsp;Merci pour votre soutien.</font></p>
 
     </div>
@@ -270,8 +243,6 @@
       toggle_lang = 0;
     }
   };
-
-  function fn() { document.querySelector( "#footnotes" ).scrollIntoView({ behavior: 'smooth' }); };
 
 </script>
 
