--- a/app/beta/confirmation/1/index.html
+++ b/app/beta/confirmation/1/index.html
@@ -43,7 +43,7 @@
         <p class="linebreak">Beta: Companion App <a href="../../../" title="Beta: Companion App Feedback Form">Feedback Form</a><font class="fr">&nbsp;&#92;&nbsp;Formulaire de commentaires sur l'application compagnon b&ecirc;ta.</font></p>
 
         <h5 class="linebreak">Join as a patron.<font class="fr">&nbsp;&#92;&nbsp;Rejoignez-nous en tant que patron.</font></h5>
-        <p>Receive a certificate of membership as an annual patron of the scenes in wildlife art or as a member of the Periwinkle Blue or Silver council at Animat Habitat.<font class="fr">&nbsp;&#92;&nbsp;Recevez un certificat d'adh&eacute;sion annuel en tant que patron des sc&egrave;nes d'art de la nature ou en tant que membre du Conseil Bleu Pervenche ou Conseil Silver chez Animat Habitat.</font></p>
+        <p>Receive a certificate of membership as an annual patron of the scenes in wildlife art or as a member of the Periwinkle or Silver council at Animat Habitat.<font class="fr">&nbsp;&#92;&nbsp;Recevez un certificat d'adh&eacute;sion annuel en tant que patron des sc&egrave;nes d'art de la nature ou en tant que membre du Conseil Bleu Pervenche ou Conseil Silver chez Animat Habitat.</font></p>
 
         <p class="linebreak">Animat Habitat <a href="../../../../patron/" title="Animat Habitat patrons.">Patron</a></p>
 
