--- a/patron/index.html
+++ b/patron/index.html
@@ -67,7 +67,7 @@
         </div>
 
         <div class="clear-top">
-          <a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-7WD13901BR293801XMNDAFNA" title="PayPal CA$25 / Patron at Animat Habitat." rel="noopener"><button>Donate<font class="fr">&#92;&nbsp;Don</font> <font class="small">CA$25 /&nbsp;yr<font class="fr">&nbsp;&#92;&nbsp;an</font><sup>&nbsp;[1]</sup></font></button></a>
+          <a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-7WD13901BR293801XMNDAFNA" title="PayPal CA$25 / Patron at Animat Habitat." target="_blank" rel="noopener"><button>Donate<font class="fr">&#92;&nbsp;Don</font> <font class="small">CA$25 /&nbsp;yr<font class="fr">&nbsp;&#92;&nbsp;an</font><sup>&nbsp;[1]</sup></font></button></a>
           <p class="linebreak">Support independent art at Animat Habitat as a Patron Member, and you will receive:<font class="fr">&nbsp;&#92;&nbsp;Soutenez l'art ind&eacute;pendant chez Animat Habitat en tant que membre patron, et vous recevrez&nbsp;:</font></p>
 
           <ul class="square">
@@ -90,7 +90,7 @@
       <div class="clear diptych">
 
         <div class="clear-top">
-          <a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-57U63714MU8341144MNDAT2A" title="PayPal CA$250 / Periwinkle Council at Animat Habitat." rel="noopener"><button>Periwinkle <font class="small">CA$250 /&nbsp;yr<sup>&nbsp;[1]</sup></font></button></a>
+          <a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-57U63714MU8341144MNDAT2A" target="_blank" title="PayPal CA$250 / Periwinkle Council at Animat Habitat." rel="noopener"><button>Periwinkle <font class="small">CA$250 /&nbsp;yr<sup>&nbsp;[1]</sup></font></button></a>
           <p class="linebreak">As a Periwinkle Council member, your donation will help fund research and development at Animat Habitat, and you will receive:<font class="fr">&nbsp;&#92;&nbsp;En tant que membre du Conseil Pervenche, votre don contribuera au financement de la recherche et du d&eacute;veloppement chez Animat Habitat, et vous recevrez&nbsp;:</font></p>
 
           <p class="linebreak"><i>All patron benefits plus&hellip;</i><font class="fr">&nbsp;&#92;&nbsp;<i>Tous les avantages des patrons plus&hellip;</i></font></p>
