--- a/patron/index.html
+++ b/patron/index.html
@@ -60,8 +60,6 @@
 
           <pre class="thin"></pre>
 
-          <p class="linebreak small"><sup>1</sup> Patron donation &ndash; including Debit or Credit card information &ndash; is processed with PayPal.<font class="fr">&nbsp;&#92;&nbsp;Votre don &ndash; incluant information de carte de d&eacute;bit ou de cr&eacute;dit &ndash; est accept&eacute; avec PayPal.</font></p>
-
           <p class="linebreak small">For a donation of more than CA$250 &ndash; and for secure wiring instructions &ndash; please contact the account office at Animat Habitat [<a href="mailto:account@animathabitat.org?subject=Donation" title="Address of the account office at Animat Habitat." target="_blank" rel="noopener">account&ndash;animathabitat.org</a>].<font class="fr">&nbsp;&#92;&nbsp;Pour un don de plus de 250 $ CA &ndash; et pour obtenir des instructions de virement s&eacute;curis&eacute; &ndash; veuillez contacter le bureau de compte chez Animat Habitat.</font></p>
 
         </div>
@@ -70,12 +68,16 @@
           <a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-7WD13901BR293801XMNDAFNA" title="PayPal CA$25 / Patron at Animat Habitat." target="_blank" rel="noopener"><button>Donate<font class="fr">&#92;&nbsp;Don</font> <font class="small">CA$25 /&nbsp;yr<font class="fr">&nbsp;&#92;&nbsp;an</font><sup>&nbsp;[1]</sup></font></button></a>
           <p class="linebreak">Support independent art at Animat Habitat as a Patron Member, and you will receive:<font class="fr">&nbsp;&#92;&nbsp;Soutenez l'art ind&eacute;pendant chez Animat Habitat en tant que membre patron, et vous recevrez&nbsp;:</font></p>
 
-          <ul class="square">
+          <ul class="lineend square">
             <li class="linebreak">Certificate of Membership. (Annual)<font class="fr"><br>&#92;&nbsp;Certificat d'adhésion. (&nbsp;Annuel&nbsp;)</font></li>
             <li>Letters from the Editor and President. (Optional)<font class="fr"><br>&#92;&nbsp;Lettres de l'éditeur et du pr&eacute;sident. (&nbsp;Optionnel&nbsp;)</font></li>
             <li>Early access to beta programs, to exhibition passes and to limited edition prints.<font class="fr">&nbsp;&#92;&nbsp;Acc&egrave;s anticip&eacute; aux programmes b&ecirc;ta, aux billets d'exposition et aux tirages en &eacute;dition limit&eacute;e.</font></li>
 
           </ul>
+
+          <pre class="thin"></pre>
+
+          <p class="linebreak small"><sup>1</sup> Patron donation &ndash; including Debit or Credit card information &ndash; is processed with PayPal.<font class="fr">&nbsp;&#92;&nbsp;Votre don &ndash; incluant information de carte de d&eacute;bit ou de cr&eacute;dit &ndash; est accept&eacute; avec PayPal.</font></p>
 
         </div>
 
