--- a/app/beta/confirmation/index.html
+++ b/app/beta/confirmation/index.html
@@ -31,7 +31,7 @@
     <ul class="page">
       <li class="crumb logo"><a href="../../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
       <li class="crumb"><a href="../../" title="Animat Habitat beta.">Beta</a></li>
-      <li class="crumb scene"><a><i>Confirmation</i></a></li>
+      <li class="crumb active"><a><i>Confirmation</i></a></li>
       <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
     </ul>
   </nav>
