--- a/patron/index.html
+++ b/patron/index.html
@@ -55,29 +55,25 @@
       <div class="clear diptych">
 
         <div class="clear-top">
-          <a href="https://www.paypal.com/donate/?hosted_button_id=D9WFX6HM23ZYC" title="PayPal / En / Animat Habitat" rel="noopener"><button>Donate<font class="fr">&#92;&nbsp;Don</font> <font class="small">CA$<sup>&nbsp;[1]</sup></font></button></a>
+          <a href="https://www.paypal.com/donate/?hosted_button_id=D9WFX6HM23ZYC" title="PayPal / En / Animat Habitat" rel="noopener"><button>Donation<font class="fr">&nbsp;&#92;&nbsp;Don</font> <font class="small">CA$</font></button></a>
           <p class="linebreak lineend">Support independent art at Animat Habitat with any amount you can <i>with no strings attached</i>.<font class="fr">&nbsp;&#92;&nbsp;Soutenez l'art ind&eacute;pendant chez Animat Habitat avec tout montant que vous le pouvez sans aucune condition.</font></p>
 
           <pre class="thin"></pre>
 
-          <p class="linebreak small">For a donation of more than CA$250 &ndash; and for secure wiring instructions &ndash; please contact the account office at Animat Habitat [<a href="mailto:account@animathabitat.org?subject=Donation" title="Address of the account office at Animat Habitat." target="_blank" rel="noopener">account&ndash;animathabitat.org</a>].<font class="fr">&nbsp;&#92;&nbsp;Pour un don de plus de 250 $ CA &ndash; et pour obtenir des instructions de virement s&eacute;curis&eacute; &ndash; veuillez contacter le bureau de compte chez Animat Habitat.</font></p>
+          <p class="linebreak small">Your donation &ndash; including Debit or Credit card information &ndash; is processed with PayPal. For a donation of more than CA$250 &ndash; and for secure wiring instructions &ndash; please contact the account office at Animat Habitat [<a href="mailto:account@animathabitat.org?subject=Donation" title="Address of the account office at Animat Habitat." target="_blank" rel="noopener">account&ndash;animathabitat.org</a>].<font class="fr">&nbsp;&#92;&nbsp;Votre don &ndash; incluant information de carte de d&eacute;bit ou de cr&eacute;dit &ndash; est accept&eacute; avec PayPal. Pour un don de plus de 250 $ CA &ndash; et pour obtenir des instructions de virement s&eacute;curis&eacute; &ndash; veuillez contacter le bureau de compte chez Animat Habitat.</font></p>
 
         </div>
 
         <div class="clear-top">
-          <a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-7WD13901BR293801XMNDAFNA" title="PayPal CA$25 / Patron at Animat Habitat." target="_blank" rel="noopener"><button>Donate<font class="fr">&#92;&nbsp;Don</font> <font class="small">CA$25 /&nbsp;yr<font class="fr">&nbsp;&#92;&nbsp;an</font><sup>&nbsp;[1]</sup></font></button></a>
+          <a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-7WD13901BR293801XMNDAFNA" title="PayPal CA$25 / Patron at Animat Habitat." target="_blank" rel="noopener"><button>Patron <font class="small">CA$25 per&nbsp;yr<font class="fr">&nbsp;&#92;&nbsp;par&nbsp;an</font></font></button></a>
           <p class="linebreak">Support independent art at Animat Habitat as a Patron Member, and you will receive:<font class="fr">&nbsp;&#92;&nbsp;Soutenez l'art ind&eacute;pendant chez Animat Habitat en tant que membre patron, et vous recevrez&nbsp;:</font></p>
 
-          <ul class="lineend square">
+          <ul class="square">
             <li class="linebreak">Certificate of Membership. (Annual)<font class="fr"><br>&#92;&nbsp;Certificat d'adhésion. (&nbsp;Annuel&nbsp;)</font></li>
             <li>Letters from the Editor and President. (Optional)<font class="fr"><br>&#92;&nbsp;Lettres de l'éditeur et du pr&eacute;sident. (&nbsp;Optionnel&nbsp;)</font></li>
             <li>Early access to beta programs, to exhibition passes and to limited edition prints.<font class="fr">&nbsp;&#92;&nbsp;Acc&egrave;s anticip&eacute; aux programmes b&ecirc;ta, aux billets d'exposition et aux tirages en &eacute;dition limit&eacute;e.</font></li>
 
           </ul>
-
-          <pre class="thin"></pre>
-
-          <p class="linebreak small"><sup>1</sup> Patron donation &ndash; including Debit or Credit card information &ndash; is processed with PayPal.<font class="fr">&nbsp;&#92;&nbsp;Votre don &ndash; incluant information de carte de d&eacute;bit ou de cr&eacute;dit &ndash; est accept&eacute; avec PayPal.</font></p>
 
         </div>
 
@@ -92,7 +88,7 @@
       <div class="clear diptych">
 
         <div class="clear-top">
-          <a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-57U63714MU8341144MNDAT2A" target="_blank" title="PayPal CA$250 / Periwinkle Council at Animat Habitat." rel="noopener"><button>Periwinkle <font class="small">CA$250 /&nbsp;yr<sup>&nbsp;[1]</sup></font></button></a>
+          <a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-57U63714MU8341144MNDAT2A" target="_blank" title="PayPal CA$250 / Periwinkle Council at Animat Habitat." rel="noopener"><button>Periwinkle <font class="small">CA$250 per&nbsp;yr<font class="fr">&nbsp;&#92;&nbsp;par&nbsp;an</font></font></button></a>
           <p class="linebreak">As a Periwinkle Council member, your donation will help fund research and development at Animat Habitat, and you will receive:<font class="fr">&nbsp;&#92;&nbsp;En tant que membre du Conseil Pervenche, votre don contribuera au financement de la recherche et du d&eacute;veloppement chez Animat Habitat, et vous recevrez&nbsp;:</font></p>
 
           <p class="linebreak"><i>All patron benefits plus&hellip;</i><font class="fr">&nbsp;&#92;&nbsp;<i>Tous les avantages des patrons plus&hellip;</i></font></p>
@@ -111,9 +107,9 @@
         </div>
 
         <div class="clear-top">
-          <a onclick="silver_council();" title="Silver Council"><button>Silver <font class="small">CA$2,500 /&nbsp;yr</font></button></a>
+          <a onclick="silver_council();" title="Silver Council"><button>Silver <font class="small">CA$2,500 per&nbsp;yr<font class="fr">&nbsp;&#92;&nbsp;par&nbsp;an</font></font></button></a>
 
-          <div class="clear-bottom" id="silver-council">
+          <div class="color" id="silver-council">
 
             <p>For secure wiring instructions, please contact the account office at Animat Habitat [<a href="mailto:account@animathabitat.org?subject=Silver%C2%A0Council" title="Address of the account office at Animat Habitat." target="_blank" rel="noopener">account&ndash;animathabitat.org</a>]. <font class="fr">&#92;&nbsp;Pour obtenir des instructions de virement s&eacute;curis&eacute;, veuillez contacter le bureau de compte chez Animat Habitat.</font></p>
 
@@ -196,7 +192,8 @@
   <footer class="single">
     <div class="quote">
 
-      <p class="small">Please address any question about donations to the account office at Animat Habitat [<a href="mailto:account@animathabitat.org" title="Address of the account office at Animat Habitat." target="_blank" rel="noopener">account–animathabitat.org</a>].<font class="fr">&nbsp;&#92;&nbsp;Adressez toute question concernant les dons au bureau de compte chez Animat Habitat.</font></p>
+      <p class="small">Please address any question about donations to the account office at Animat Habitat [<a href="mailto:account@animathabitat.org" title="Address of the secretariat at Animat Habitat." target="_blank" rel="noopener">account–animathabitat.org</a>].<font class="fr">&nbsp;&#92;&nbsp;Adressez toute question concernant les dons au bureau do compte chez Animat Habitat.</font></p>
+
       <p class="linebreak small">Thank you for your support.<font class="fr">&nbsp;&#92;&nbsp;Merci pour votre soutien.</font></p>
 
     </div>
