--- a/scene/two/history-of-forests-trees/index.html
+++ b/scene/two/history-of-forests-trees/index.html
@@ -108,7 +108,7 @@
 
       <div class="clear">
         <img alt="" src="https://animathabitat.com/inc/img/~02/art/robert-bateman/1999.bateman.rockface-descent-leopard.jpg" />
-        <p class="text-right gutter-side"><i>Rockface Decent &ndash; Leopard</i> (acrylic color, 1999) &copy; Robert Bateman [<a href="../../../url/www/robertbateman/" rel="noopener" target="_blank" title="Robert Bateman">robertbateman.ca</a>, recolored]</p>
+        <p class="text-right gutter-side"><i>Rockface Decent &ndash; Leopard</i> (acrylic color, 1999) &copy; Robert Bateman [<a href="../../../url/-ca/robertbateman/" rel="noopener" target="_blank" title="Robert Bateman">robertbateman.ca</a>, recolored]</p>
 
       </div> -->
 
@@ -159,7 +159,7 @@
 
       <div class="clear">
         <img alt="" src="https://animathabitat.com/inc/img/~02/art/franz-kline/kline.le-gros.1961.jpg" />
-        <p class="text-right gutter-side"><i>Le Gros</i> (1961) by Franz Kline [<a href="../../../url/www/moma-franz-kline/" rel="noopener" target="_blank" title="The Museum of Modern Art / Artist / Franz Kline">moma.org</a>]</p>
+        <p class="text-right gutter-side"><i>Le Gros</i> (1961) by Franz Kline [<a href="../../../url/moma/franz-kline/" rel="noopener" target="_blank" title="The Museum of Modern Art / Artist / Franz Kline">moma.org</a>]</p>
 
       </div>
 
@@ -191,13 +191,13 @@
 
         <div class="clear-bottom">
           <img alt="" src="https://animathabitat.com/inc/img/~02/art/robert-bateman/1990.bateman.midnight-black-wolf.jpg" />
-          <p class="text-right"><i>Midnight &ndash; Black Wolf</i> (acrylic color, 1989) &copy; Robert Bateman [<a href="../../../url/www/robertbateman/" rel="noopener" target="_blank" title="Robert Bateman">robertbateman.ca</a>, grayscale]</p>
+          <p class="text-right"><i>Midnight &ndash; Black Wolf</i> (acrylic color, 1989) &copy; Robert Bateman [<a href="../../../url/-ca/robertbateman/" rel="noopener" target="_blank" title="Robert Bateman">robertbateman.ca</a>, grayscale]</p>
 
         </div>
 
         <div class="clear-bottom">
           <img alt="" src="https://animathabitat.com/inc/img/~02/art/robert-bateman/2005.bateman.white-encounter.jpg" />
-          <p class="text-right"><i>White Encounter</i> (acrylic color, 2005) &copy; Robert Bateman [<a href="../../../url/www/robertbateman/" rel="noopener" target="_blank" title="Robert Bateman">robertbateman.ca</a>, grayscale]</p>
+          <p class="text-right"><i>White Encounter</i> (acrylic color, 2005) &copy; Robert Bateman [<a href="../../../url/-ca/robertbateman/" rel="noopener" target="_blank" title="Robert Bateman">robertbateman.ca</a>, grayscale]</p>
 
         </div>
 
@@ -230,7 +230,7 @@
 
         <div class="quote" id="footnotes-2">
           <p class="small"><sup>3</sup> D'Augustine, Corey. <i>In the Studio</i> &lsquo;The Painting Technique of Franz Kline: Chief&rsquo; (2010) The Museum of Modern Art. <a href="../../../url/yt/1xQTlp0hscs/" title="YouTube / The Museum of Modern Art / In the Studio / The Painting Technique of Franz Kline: Chief" target="_blank" rel="noopener">Video&nbsp;Link</a></p>
-          <p class="small"><sup>4</sup> Bateman, Robert. &lsquo;Bateman on Painting&rsquo; <a href="../../../url/www/robertbateman-on-painting/" title="Robert Bateman / Painting" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>4</sup> Bateman, Robert. &lsquo;Bateman on Painting&rsquo; <a href="../../../url/-ca/robertbateman-on-painting/" title="Robert Bateman / Painting" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
           <!-- YouTube Series of Bateman talks ?? -->
 
