--- a/d/index.html
+++ b/d/index.html
@@ -19,9 +19,9 @@
   </style>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;500" />
-  <link rel="stylesheet" href="../../inc/css/dark.light.unicorn.css" />
+  <link rel="stylesheet" href="../inc/css/dark.light.unicorn.css" />
 
-  <link rel="icon" href="../../inc/ico/animat.mark.1.1.72.light.png" />
+  <link rel="icon" href="../inc/ico/animat.mark.1.1.72.light.png" />
 
 </head>
 
@@ -29,7 +29,7 @@
 
   <nav>
     <ul class="page">
-      <li class="crumb logo"><a href="../../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
+      <li class="crumb logo"><a href="../" title="Animat Habitat"><img alt="Animat Mark (Light) &copy; Animat Habitat, 2015" class="logo" src="../inc/svg/animat.mark.1.1.1200.light.svg"/></a></li>
       <li class="crumb active"><a><i>Confirmation</i></a></li>
       <li class="right thin"><a onclick="toggle_language();" title="Animat Habitat en fran&ccedil;ais."><font class="fr-en">fr</font><font class="fr">&#92;&nbsp;fr</font></a></li>
     </ul>
