--- a/url/-co-uk/bbc-programmes-p02544td/index.html
+++ b/url/-co-uk/bbc-programmes-p02544td/index.html
@@ -1,4 +1,4 @@
 <!doctype html>
 <html>
 <head>
-  <meta http-equiv="refresh" content="0; url=http://www.botswana.co.za" /></head></html>
+  <meta http-equiv="refresh" content="0; url=https://bbc.co.uk/programmes/p02544td/" /></head></html>
