--- a/conservation/africa-afrique/index.html
+++ b/conservation/africa-afrique/index.html
@@ -104,15 +104,15 @@
 
             <h5><font class="overscore">Eastern Africa</font><font class="fr">&nbsp;&#92;&nbsp;Afrique de l'Est</font></h5>
             <ul>
-              <li><a href="../../url/whc/1060/" title="UNESCO #1060" target="_blank" rel="noopener">Kenya Lake System in the Great Rift Valley</a>, <i>Kenya</i></li>
-              <li><a href="../../url/whc/403/" title="UNESCO #403" target="_blank" rel="noopener">Kilimanjaro National Park</a>, <i>Tanzania</i></li>
-              <li><a href="../../url/whc/289/" title="UNESCO #289" target="_blank" rel="noopener">Lake Malawi National Park</a>, <i>Malawi</i></li>
-              <li><a href="../../url/whc/801/" title="UNESCO #801" target="_blank" rel="noopener">Lake Turkana National Parks</a>, <i>Kenya</i></li>
-              <li><a href="../../url/whc/800/" title="UNESCO #800" target="_blank" rel="noopener">Mount Kenya National Park and Natural Forest</a>, <i>Kenya</i></li>
-              <li><a href="../../url/whc/39/" title="UNESCO #39" target="_blank" rel="noopener">Ngorongoro Conservation Area</a>, <i>Tanzania</i></li>
-              <li><a href="../../url/whc/199/" title="UNESCO #199" target="_blank" rel="noopener">Selous Game Reserve</a><sup>&nbsp;[<a class="button" onclick="fn();" title="Game Reserve">1</a>]</sup>, <i>Tanzania</i></li>
-              <li><a href="../../url/whc/156/" title="UNESCO #156" target="_blank" rel="noopener">Serengeti National Park</a>, <i>Tanzania</i></li>
-              <li><a href="../../url/whc/5515/" title="UNESCO #5515" target="_blank" rel="noopener">Tsavo National Parks and Chyulu Hills Complex</a>, <i>Kenya</i></li>
+              <li><a href="../../url/unesco/1060/" title="UNESCO #1060" target="_blank" rel="noopener">Kenya Lake System in the Great Rift Valley</a>, <i>Kenya</i></li>
+              <li><a href="../../url/unesco/403/" title="UNESCO #403" target="_blank" rel="noopener">Kilimanjaro National Park</a>, <i>Tanzania</i></li>
+              <li><a href="../../url/unesco/289/" title="UNESCO #289" target="_blank" rel="noopener">Lake Malawi National Park</a>, <i>Malawi</i></li>
+              <li><a href="../../url/unesco/801/" title="UNESCO #801" target="_blank" rel="noopener">Lake Turkana National Parks</a>, <i>Kenya</i></li>
+              <li><a href="../../url/unesco/800/" title="UNESCO #800" target="_blank" rel="noopener">Mount Kenya National Park and Natural Forest</a>, <i>Kenya</i></li>
+              <li><a href="../../url/unesco/39/" title="UNESCO #39" target="_blank" rel="noopener">Ngorongoro Conservation Area</a>, <i>Tanzania</i></li>
+              <li><a href="../../url/unesco/199/" title="UNESCO #199" target="_blank" rel="noopener">Selous Game Reserve</a><sup>&nbsp;[<a class="button" onclick="fn();" title="Game Reserve">1</a>]</sup>, <i>Tanzania</i></li>
+              <li><a href="../../url/unesco/156/" title="UNESCO #156" target="_blank" rel="noopener">Serengeti National Park</a>, <i>Tanzania</i></li>
+              <li><a href="../../url/unesco/5515/" title="UNESCO #5515" target="_blank" rel="noopener">Tsavo National Parks and Chyulu Hills Complex</a>, <i>Kenya</i></li>
             </ul>
 
             <p class="linebreak small">More habitats protected by <a href="../../url/-go-ke/kws/" title="Kenya Wildlife Service" target="_blank" rel="noopener">Kenya Wildlife Service</a>, Kenya.<font class="fr">&nbsp;&#92;&nbsp;Plus d'habitats prot&eacute;g&eacute;es au Kenya.</font></p>
@@ -214,15 +214,15 @@
           <div>
             <h5><font class="overscore">Southern Africa</font><font class="fr">&nbsp;&#92;&nbsp;Afrique du sud</font></h5>
             <ul>
-              <li><a href="../../url/whc/914/" title="UNESCO #914" target="_blank" rel="noopener">iSimangaliso Wetland Park</a>, <i>South Africa</i></li>
-              <li><a href="../../url/whc/985/" title="UNESCO #985" target="_blank" rel="noopener">Maloti-Drakensberg Park</a>, <i>Lesotho</i>, <i>South Africa</i></li>
-              <li><a href="../../url/whc/302/" title="UNESCO #302" target="_blank" rel="noopener">Mana Pools National Park</a>, <i>Zimbabwe</i></li>
-              <li><a href="../../url/whc/1099/" title="UNESCO #1099" target="_blank" rel="noopener">Mapungubwe Cultural Landscape</a>, <i>South Africa</i></li>
-              <li><a href="../../url/whc/509/" title="UNESCO #509" target="_blank" rel="noopener">Mosi-oa-Tunya &ndash; Victoria Falls</a>, <i>Zambia</i>, <i>Zimbabwe</i></li>
-              <li><a href="../../url/whc/1432/" title="UNESCO #1432" target="_blank" rel="noopener">Okavango Delta</a>, <i>Angola</i>, <i>Botswana</i>, <i>Namibia</i></li>
-              <li>Torra Conservancy near <a href="../../url/whc/1255/" title="UNESCO #1255" target="_blank" rel="noopener">Twyfelfontein</a>, <i>Namibia</i></li>
+              <li><a href="../../url/unesco/914/" title="UNESCO #914" target="_blank" rel="noopener">iSimangaliso Wetland Park</a>, <i>South Africa</i></li>
+              <li><a href="../../url/unesco/985/" title="UNESCO #985" target="_blank" rel="noopener">Maloti-Drakensberg Park</a>, <i>Lesotho</i>, <i>South Africa</i></li>
+              <li><a href="../../url/unesco/302/" title="UNESCO #302" target="_blank" rel="noopener">Mana Pools National Park</a>, <i>Zimbabwe</i></li>
+              <li><a href="../../url/unesco/1099/" title="UNESCO #1099" target="_blank" rel="noopener">Mapungubwe Cultural Landscape</a>, <i>South Africa</i></li>
+              <li><a href="../../url/unesco/509/" title="UNESCO #509" target="_blank" rel="noopener">Mosi-oa-Tunya &ndash; Victoria Falls</a>, <i>Zambia</i>, <i>Zimbabwe</i></li>
+              <li><a href="../../url/unesco/1432/" title="UNESCO #1432" target="_blank" rel="noopener">Okavango Delta</a>, <i>Angola</i>, <i>Botswana</i>, <i>Namibia</i></li>
+              <li>Torra Conservancy near <a href="../../url/unesco/1255/" title="UNESCO #1255" target="_blank" rel="noopener">Twyfelfontein</a>, <i>Namibia</i></li>
 
-              <!-- <li><a href="../../url/whc/306/" title="UNESCO #306" target="_blank" rel="noopener">Matobo Hills</a>, <i>Zimbabwe</i></li> -->
+              <!-- <li><a href="../../url/unesco/306/" title="UNESCO #306" target="_blank" rel="noopener">Matobo Hills</a>, <i>Zimbabwe</i></li> -->
 
             </ul>
 
