--- a/scene/one/index.html
+++ b/scene/one/index.html
@@ -90,7 +90,7 @@
 
         <p class="linebreak">Journey with an elephant across a sea of sand: <i>White Elephant</i> is an e-book and a limited edition print that comes to life with a companion app. This publication is first in a series of scenes in wildlife art at Animat Habitat. <i>White Elephant</i>&mdash;the comic book is available for pre-order as a first-edition paperback.<font class="fr">&nbsp;&#92;&nbsp;Voyage avec un &eacute;l&eacute;phant &agrave; travers une mer de sable&nbsp;: <i>&Eacute;l&eacute;phant blanc</i> est un publication num&eacute;rique et une &eacute;dition limit&eacute;e qui prend vie avec l'application compagnon. Cette publication est la premi&egrave;re d'une s&eacute;rie de projets chez Animat Habitat. La bande dessin&eacute;e est pr&ecirc;t &agrave; pr&eacute;commander en tant que premi&egrave;re &eacute;dition broch&eacute;.</font></p>
 
-        <!-- <h5>UNESCO World Heritage Site:<font class="fr">&nbsp;&#92;&nbsp;Patrimoine mondial&nbsp;:</font> <a href="../../url/whc/1432/" rel="noopener" target="_blank" title="UNESCO World Heritage Site / Okavango Delta">Okavango Delta</a></h5> -->
+        <!-- <h5>UNESCO World Heritage Site:<font class="fr">&nbsp;&#92;&nbsp;Patrimoine mondial&nbsp;:</font> <a href="../../url/unesco/1432/" rel="noopener" target="_blank" title="UNESCO World Heritage Site / Okavango Delta">Okavango Delta</a></h5> -->
 
         <p class="linebreak">Language:<font class="fr">&nbsp;&#92;&nbsp;Langue&nbsp;:</font> En<font class="fr">&nbsp;&#92;&nbsp;An</font>, Fr, Ja<!--, Zh-HanT*--></p>
         <!-- <p>Publication Date:<font class="fr">&nbsp;&#92;&nbsp;Date de parution&nbsp;:</font> 12.2024</p> -->
