--- a/scene/one/reference-art-2/index.html
+++ b/scene/one/reference-art-2/index.html
@@ -90,7 +90,7 @@
       <div>
         <p>Another teaching artist and storyteller, Ryan Woodward, was at CTN-X showing his recently released an app and animated graphic novel titled <i>Bottom of the Ninth</i>. Ryan Woodward has a uniquely expressive style of animation that is delightful in and of itself. This style is particularly present in one of his most personal works, and one of my personal favorite animated short films: <i>Thought of You</i> (2010). His artwork and videos describing the journey that lead to the creation of <i>Thought of You</i> in 2010 and then <i>Bottom of the Ninth</i> in 2012 have inspired and trail-blazed my passion for my project <i>White Elephant</i>.<sup>&nbsp;[<a class="button" onclick="fn();" title="Woodward">4</a>]</sup></p>
 
-        <p class="linebreak">At CTN-X, Woodward called attention to the patterns in artistic struggle and ecstasy: <a title="YouTube / Sesame Street / Don Music, Kermit the Frog" href="../../../url/yt/RrJnzBFzEEY/" target="_blank" rel="noopener">Sesame Street: Don Music, Kermit the Frog</a>. This has served me as a playful reminder to enjoy the experience of doing what I love to do. And ya, <i>I draw because I like to.</i></p>
+        <p class="linebreak">At CTN-X, Woodward called attention to the patterns in artistic struggle and ecstasy: <a title="YouTube / Sesame Street / Don Music, Kermit the Frog" href="../../../url/youtube/RrJnzBFzEEY/" target="_blank" rel="noopener">Sesame Street: Don Music, Kermit the Frog</a>. This has served me as a playful reminder to enjoy the experience of doing what I love to do. And ya, <i>I draw because I like to.</i></p>
 
       </div>
 
@@ -132,7 +132,7 @@
 
         <div class="quote" id="footnotes-2">
           <p class="small"><sup>4</sup> Vimeo / Ryan Woodward &ndash; Thought of You (animated short, 2010). <a href="../../../url/vimeo/14803194/" title="Vimeo / Ryan Woodward / Thought of You" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
-          <p class="small"><sup>5</sup> National Gallery of Art (NGA) / Eadweard Muybridge / Animal Locomotion (1887), Plate 733. <a href="../../../url/www/nga-muybridge-733/" title="Eadweard Muybridge / Animal Locomotion (1887), Plate 733." target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>5</sup> National Gallery of Art (NGA) / Eadweard Muybridge / Animal Locomotion (1887), Plate 733. <a href="../../../url/-gov/nga-muybridge-733/" title="Eadweard Muybridge / Animal Locomotion (1887), Plate 733." target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
         </div>
       </div>
