--- a/scene/one/reference-art/index.html
+++ b/scene/one/reference-art/index.html
@@ -48,7 +48,7 @@
       </div>
 
       <img alt="" src="https://animathabitat.com/inc/img/~01/art/cave.chauvet.jpg" />
-      <p class="text-right gutter-side">Chauvet-Pont-d’Arc Cave, 30,000-32,000 BP [<a title="UNESCO / Chauvet-Pont-d'Arc" href="../../../url/whc/1426/" target="_blank" rel="noopener">unesco.org</a>]</p>
+      <p class="text-right gutter-side">Chauvet-Pont-d’Arc Cave, 30,000-32,000 BP [<a title="UNESCO / Chauvet-Pont-d'Arc" href="../../../url/unesco/1426/" target="_blank" rel="noopener">unesco.org</a>]</p>
 
       <div class="clear-top">
         <h3 class="linebreak">Animals in Art History</h3>
@@ -68,7 +68,7 @@
         </div>
 
       </div>
-      <p class="text-right gutter-side lineend">Chauvet-Pont-d’Arc Cave, 30,000-32,000 BP [<a title="UNESCO / Chauvet-Pont-d'Arc" href="../../../url/whc/1426/" target="_blank" rel="noopener">unesco.org</a>]</p>
+      <p class="text-right gutter-side lineend">Chauvet-Pont-d’Arc Cave, 30,000-32,000 BP [<a title="UNESCO / Chauvet-Pont-d'Arc" href="../../../url/unesco/1426/" target="_blank" rel="noopener">unesco.org</a>]</p>
 
       <div class="color quote">
         <h4><font class="color text-quote">&ldquo;</font><i>From the earliest days, [humans have] tried to capture in drawings the living quality of the creatures around [them]. [&hellip;] For some presumptuous reason, [we feel] the need to create something of [our] own that appears to be living, that has an inner strength, a vitality, a separate identity &ndash; something that speaks out with authority &ndash; a creation that gives the illusion of life. Twenty-five thousand years ago, in the caves of southwestern Europe, [the early modern humans] made astounding drawings of the animals [they] hunted. [The] representations are not only accurate and beautifully drawn, but many seem to have an inner life combined with a suggestion of movement.</i><font class="color text-quote">&rdquo;</font><br><font class="color small thin">&mdash;&nbsp;Frank Thomas and Ollie Johnston. (1981) <i>The Illusion of Life: Disney Animation</i>, p&nbsp;13. Walt Disney Publications.</font></h4>
