--- a/scene/one/wildlife-documentary-2/index.html
+++ b/scene/one/wildlife-documentary-2/index.html
@@ -73,7 +73,7 @@
 
         <p class="linebreak"><i>The Elephant Queen</i> (documentary film, 2018) is rated 7.8 on IMDB.</p>
 
-        <p class="linebreak"><i>The Elephant Queen</i> &ndash; <a href="../../../url/yt/e8TsCQmngFk/" rel="noopener" target="_blank" title="Youtube / Apple TV / The Elephant Queen &ndash; Official Movie Trailer">Official Trailer</a> (2018).</p>
+        <p class="linebreak"><i>The Elephant Queen</i> &ndash; <a href="../../../url/youtube/e8TsCQmngFk/" rel="noopener" target="_blank" title="Youtube / Apple TV / The Elephant Queen &ndash; Official Movie Trailer">Official Trailer</a> (2018).</p>
 
         <p class="linebreak">Discover more about elephants and how you can help them: <a href="../../../url/-com/theeelephantqueen/" title="The Elephant Queen (documentary film, 2018)" target="_blank" rel="noopener">theeelephantqueen.com</a>.</p>
 
