--- a/scene/one/wildlife-documentary/index.html
+++ b/scene/one/wildlife-documentary/index.html
@@ -88,7 +88,7 @@
       <div class="clear">
 
         <div class="quote" id="footnotes">
-          <p class="small"><sup>1</sup> Ralph, J. &ldquo;We Will Not Go&rdquo;, 2014. <a href="../../../url/yt/iJ9WXvPhTrs/" title="YouTube / We Will Not Go by J. Ralph with Salif Keita, Youssou Ndour, Fally Ipupa" target="_blank" rel="noopener">Video&nbsp;Link</a></p>
+          <p class="small"><sup>1</sup> Ralph, J. &ldquo;We Will Not Go&rdquo;, 2014. <a href="../../../url/youtube/iJ9WXvPhTrs/" title="YouTube / We Will Not Go by J. Ralph with Salif Keita, Youssou Ndour, Fally Ipupa" target="_blank" rel="noopener">Video&nbsp;Link</a></p>
           <p class="small"><sup>2</sup> Ramsey, S. (2017) &ldquo;Interview With Emmanuel de Merode, Director of Virunga National Park&rdquo; National Geographic. <a href="../../../url/-org/nationalgeographic-interview-with-emmanuel-de-merode-director-of-virunga-national-park/" title="National Geographic / Interview with Emmanuel de Merode" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
         </div>
@@ -145,7 +145,7 @@
 
         <p class="linebreak"><i>Before the Flood</i> (documentary film, 2016) is rated 8.3 on IMDB.</p>
 
-        <p class="linebreak"><i>Before the Flood</i> &ndash; <a href="../../../url/yt/D9xFFyUOpXo" rel="noopener" target="_blank" title="YouTube / National Geographic / Before the Flood - Trailer">Official Trailer</a> (2016).</p>
+        <p class="linebreak"><i>Before the Flood</i> &ndash; <a href="../../../url/youtube/D9xFFyUOpXo" rel="noopener" target="_blank" title="YouTube / National Geographic / Before the Flood - Trailer">Official Trailer</a> (2016).</p>
 
         <p class="linebreak">Take action at <a href="../../../url/-com/beforetheflood-act/" title="Before the Flood (documentary film, 2016)">beforetheflood.com</a>.</p>
       </div>
@@ -154,7 +154,7 @@
 
         <div class="quote" id="footnotes-2">
           <p class="small"><sup>3</sup> Mann, E. M. <a href="../../../url/x/michaelmann/" title="X / Michael E. Mann" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
-          <p class="small"><sup>4</sup> Sellers, P. NASA Goddard, 2016. <a href="../../../url/nasa/piers-sellers-1955-2016/" title="NASA / Piers Sellers" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>4</sup> Sellers, P. NASA Goddard, 2016. <a href="../../../url/-gov/nasa-piers-sellers-1955-2016/" title="NASA / Piers Sellers" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
         </div>
       </div>
@@ -224,7 +224,7 @@
 
         <p class="linebreak"><i>The Ivory Game</i> (documentary film, 2016) is rated 7.9 on IMDB.</p>
 
-        <p class="linebreak"><i>The Ivory Game</i> &ndash; <a href="../../../url/yt/3GPEKKaSmZY/" rel="noopener" target="_blank" title="YouTube / Netflix / The Ivory Game - Official Trailer">Official Trailer</a> (2016).</p>
+        <p class="linebreak"><i>The Ivory Game</i> &ndash; <a href="../../../url/youtube/3GPEKKaSmZY/" rel="noopener" target="_blank" title="YouTube / Netflix / The Ivory Game - Official Trailer">Official Trailer</a> (2016).</p>
 
         <p class="linebreak">Join the fight at <a href="../../../url/-com/theivorygame/" title="The ivory Game (documentary film, 2016)" target="_blank" rel="noopener">theivorygame.com</a>.</p>
       </div>
@@ -232,8 +232,8 @@
       <div class="clear">
 
         <div class="quote" id="footnotes-2">
-          <p class="small"><sup>5</sup> Scott Salinas, H. <i>The Ivory Game</i>, 2016. <a href="../../../url/www/hscottsalinas-the-ivory-game/" title="H. Scott Salinas / The Ivory Game" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
-          <p class="small"><sup>6</sup> Kaiserlicht. <i>The Ivory Game</i> Title Sequence, 2016. <a href="../../../url/vimeo/191002515/" title="Vimeo / Kaiserlicht / The Ivory Game - Title Sequence" target="_blank" rel="noopener">Video&nbsp;Link</a><a href="../../../url/www/kaiserlicht-the-ivory-game/" title="Kaiserlicht / The Ivory Game" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>5</sup> Scott Salinas, H. <i>The Ivory Game</i>, 2016. <a href="../../../url/-com/hscottsalinas-the-ivory-game/" title="H. Scott Salinas / The Ivory Game" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>6</sup> Kaiserlicht. <i>The Ivory Game</i> Title Sequence, 2016. <a href="../../../url/vimeo/191002515/" title="Vimeo / Kaiserlicht / The Ivory Game - Title Sequence" target="_blank" rel="noopener">Video&nbsp;Link</a><a href="../../../url/-at/kaiserlicht-the-ivory-game/" title="Kaiserlicht / The Ivory Game" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
 
         </div>
