--- a/scene/two/index.html
+++ b/scene/two/index.html
@@ -96,7 +96,7 @@
 
         <!-- <p class="stock">Digital copy and two print sizes available for pre-order with PayPal.<font class="fr">&nbsp;&#92;&nbsp;Copie num&eacute;rique et deux tailles de gicl&eacute;e pr&ecirc;t &agrave; pr&eacute;commander avec PayPal.</font></p> -->
 
-        <!-- <h5>UNESCO World Heritage Site:<font class="fr">&nbsp;&#92;&nbsp;Patrimoine mondial&nbsp;:</font> <a class="score" href="../../url/whc/1234/" rel="noopener" target="_blank" title="UNESCO World Heritage Site / Putorana Plateau">Putorana Plateau</a></h5> -->
+        <!-- <h5>UNESCO World Heritage Site:<font class="fr">&nbsp;&#92;&nbsp;Patrimoine mondial&nbsp;:</font> <a class="score" href="../../url/unesco/1234/" rel="noopener" target="_blank" title="UNESCO World Heritage Site / Putorana Plateau">Putorana Plateau</a></h5> -->
 
       </div>
 
