--- a/scene/zero/index.html
+++ b/scene/zero/index.html
@@ -87,7 +87,7 @@
 
         <p class="linebreak"><i>White Rhino</i> is an oil painting that sets a serene landscape in Tanzania in contrast with an endangerment on the horizon for the northern white rhinoceros. The painting is regarded as a formative study at Animat Habitat where it started a conversation about the role we want to play in shaping the world we want to live in.<font class="fr">&nbsp;&#92;&nbsp;<i>Rhinoc&eacute;ros blanc</i> est une peinture &agrave; l'huile qui fixe un paysage serein en Tanzanie en contraste avec une menace &agrave; l'horizon pour le rhinoc&eacute;ros blanc. La peinture est consid&eacute;r&eacute;e comme l'&eacute;tude formative chez Animat Habitat o&ugrave; elle a commenc&eacute; une conversation sur la fa&ccedil;on dont nous voulons fa&ccedil;onner le monde dans lequel nous voulons vivre.</font></p>
 
-        <!-- <h5>UNESCO World Heritage Site:<font class="fr">&nbsp;&#92;&nbsp;Patrimoine mondial&nbsp;:</font> <a href="../../url/whc/39/" rel="noopener" target="_blank" title="UNESCO World Heritage Site / Ngorongoro Conservation Area">Ngorongoro Conservation Area</a></h5> -->
+        <!-- <h5>UNESCO World Heritage Site:<font class="fr">&nbsp;&#92;&nbsp;Patrimoine mondial&nbsp;:</font> <a href="../../url/unesco/39/" rel="noopener" target="_blank" title="UNESCO World Heritage Site / Ngorongoro Conservation Area">Ngorongoro Conservation Area</a></h5> -->
 
       </div>
 
