--- a/scene/one/elephant-conservation-africa/index.html
+++ b/scene/one/elephant-conservation-africa/index.html
@@ -43,13 +43,13 @@
         <h2 class="color">Elephant Conservation in Africa</h2>
         <h5 class="author">Press secretary at Animat Habitat.</h5>
 
-        <p class="linebreak"><i>On June 15th, wildlife filmmaker Mark Deeble submitted a final chapter for the story of <a title="Mark Deeble / Satao &ndash; A Legend" href="../../../url/wp/markdeeble-satao-a-legend-2/" target="_blank" rel="noopener">Satao&mdash;a legend</a>. Thanks to Mark for sharing his account of the life and death of this magnificent bull elephant. Let the story of Satao be a chapter we learn from, and change the way we look at wildlife.</i><sup>&nbsp;[<a class="button" onclick="fn();" title="Mark Deeble">1</a>]</sup></p>
+        <p class="linebreak"><i>On June 15th, wildlife filmmaker Mark Deeble submitted a final chapter for the story of <a title="Mark Deeble / Satao &ndash; A Legend" href="../../../url/wordpress/markdeeble-satao-a-legend-2/" target="_blank" rel="noopener">Satao&mdash;a legend</a>. Thanks to Mark for sharing his account of the life and death of this magnificent bull elephant. Let the story of Satao be a chapter we learn from, and change the way we look at wildlife.</i><sup>&nbsp;[<a class="button" onclick="fn();" title="Mark Deeble">1</a>]</sup></p>
 
         <p class="linebreak"><i>Looking at Satao from a distance&mdash;from Canada, North America, it is unfair to place a value on such a loss for Kenya, and on such widespread biodiversity loss across Africa, without also addressing the impact of pollutants emitted and resources wasted by the rest of the world. This article points to Satao, as an ambassador for the crisis facing elephant conservation in Africa, and also to the ways the world can help create change from home.</i></p>
       </div>
 
       <img alt="" src="https://animathabitat.com/inc/img/~01/photo/~mark-deeble/deeble.2014.satao.bull-drinking.png" />
-      <p class="text-right gutter-side">Satao, &ldquo;Bull drinking.&rdquo; (2014) &copy; Mark Deeble [<a title="Mark Deeble / Satao &ndash; A Legend" href="../../../url/wp/markdeeble-satao-a-legend-2/" target="_blank" rel="noopener">markdeeble.com</a>]</p>
+      <p class="text-right gutter-side">Satao, &ldquo;Bull drinking.&rdquo; (2014) &copy; Mark Deeble [<a title="Mark Deeble / Satao &ndash; A Legend" href="../../../url/wordpress/markdeeble-satao-a-legend-2/" target="_blank" rel="noopener">markdeeble.com</a>]</p>
 
       <div>
         <h3 class="linebreak">Change in Africa</h3>
@@ -64,7 +64,7 @@
       </div>
 
       <img alt="" src="https://animathabitat.com/inc/img/~01/photo/~mark-deeble/deeble.2014.satao.dead-and-splayed.png" />
-      <p class="text-right gutter-side">Satao, &ldquo;Dead and splayed.&rdquo; (2014) &copy; Mark Deeble [<a title="Mark Deeble / Satao &ndash; A Legend" href="../../../url/wp/markdeeble-satao-a-legend-2/" target="_blank" rel="noopener">markdeeble.com</a>]</p>
+      <p class="text-right gutter-side">Satao, &ldquo;Dead and splayed.&rdquo; (2014) &copy; Mark Deeble [<a title="Mark Deeble / Satao &ndash; A Legend" href="../../../url/wordpress/markdeeble-satao-a-legend-2/" target="_blank" rel="noopener">markdeeble.com</a>]</p>
 
       <div>
         <p>The Tsavo bull was killed for his ivory in late May 2014.</p>
@@ -80,7 +80,7 @@
       <div class="clear">
 
         <div class="quote" id="footnotes">
-          <p class="small"><sup>1</sup> Mark Deeble, wildlife filmmaker. <a href="../../../url/wp/markdeeble/" title="Mark Deeble" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>1</sup> Mark Deeble, wildlife filmmaker. <a href="../../../url/wordpress/markdeeble/" title="Mark Deeble" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
         </div>
       </div>
