--- a/scene/two/history-of-forests-trees/index.html
+++ b/scene/two/history-of-forests-trees/index.html
@@ -229,7 +229,7 @@
       <div class="clear">
 
         <div class="quote" id="footnotes-2">
-          <p class="small"><sup>3</sup> D'Augustine, Corey. <i>In the Studio</i> &lsquo;The Painting Technique of Franz Kline: Chief&rsquo; (2010) The Museum of Modern Art. <a href="../../../url/yt/1xQTlp0hscs/" title="YouTube / The Museum of Modern Art / In the Studio / The Painting Technique of Franz Kline: Chief" target="_blank" rel="noopener">Video&nbsp;Link</a></p>
+          <p class="small"><sup>3</sup> D'Augustine, Corey. <i>In the Studio</i> &lsquo;The Painting Technique of Franz Kline: Chief&rsquo; (2010) The Museum of Modern Art. <a href="../../../url/youtube/1xQTlp0hscs/" title="YouTube / The Museum of Modern Art / In the Studio / The Painting Technique of Franz Kline: Chief" target="_blank" rel="noopener">Video&nbsp;Link</a></p>
           <p class="small"><sup>4</sup> Bateman, Robert. &lsquo;Bateman on Painting&rsquo; <a href="../../../url/-ca/robertbateman-on-painting/" title="Robert Bateman / Painting" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
           <!-- YouTube Series of Bateman talks ?? -->
@@ -257,7 +257,7 @@
 
       <div class="clear">
         <img alt="" src="https://animathabitat.com/inc/img/~02/photo/~kieran-o-donovan/silverback-films.our-planet.8.forests.2019.jpg" />
-        <p class="text-right gutter-side">&lsquo;Amur tiger caught on camera trap in the boreal forests of Russia's Pacific Coast&rsquo; by Kieran O'Donovan, <i>Our Planet</i> e/8: &lsquo;Forests&rsquo; (2019) &copy; Silverback Films, Netflix [<a href="../../../url/www/ourplanet/" rel="noopener" target="_blank" title="Our Planet (2019)">ourplanet.com</a>]</p>
+        <p class="text-right gutter-side">&lsquo;Amur tiger caught on camera trap in the boreal forests of Russia's Pacific Coast&rsquo; by Kieran O'Donovan, <i>Our Planet</i> e/8: &lsquo;Forests&rsquo; (2019) &copy; Silverback Films, Netflix [<a href="../../../url/-com/ourplanet/" rel="noopener" target="_blank" title="Our Planet (2019)">ourplanet.com</a>]</p>
 
       </div>
 
@@ -303,8 +303,8 @@
       <div class="clear">
 
         <div class="quote" id="footnotes-3">
-          <p class="small"><sup>5</sup> O'Donovan, Kieran. <i>Our Planet</i> (2019) Silverback Films, Netfilx <a href="../../../url/www/ourplanet/" title="Our Planet (2019)" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
-          <p class="small"><sup>6</sup> Galloway, Gloria. &lsquo;Canada's boreal forest needs global protection&hellip;&rsquo; (2011) The Globe And Mail. <a href="../../../url/www/theglobeandmail-canadas-boreal-forest/" title="The Globe And Mail / Politics / Canada's boreal forest needs global protection (2011)" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>5</sup> O'Donovan, Kieran. <i>Our Planet</i> (2019) Silverback Films, Netfilx <a href="../../../url/-com/ourplanet/" title="Our Planet (2019)" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+          <p class="small"><sup>6</sup> Galloway, Gloria. &lsquo;Canada's boreal forest needs global protection&hellip;&rsquo; (2011) The Globe And Mail. <a href="../../../url/theglobeandmail/canadas-boreal-forest/" title="The Globe And Mail / Politics / Canada's boreal forest needs global protection (2011)" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
         </div>
       </div>
