--- a/scene/zero/northern-white-rhinoceros/index.html
+++ b/scene/zero/northern-white-rhinoceros/index.html
@@ -63,7 +63,7 @@
 
       <div class="clear">
         <img alt="A wildlife ranger comforts Sudan moments before he passed away, Ol Pejeta Conservancy, Kenya (March 2018) &copy; Ami Vitale" src="https://animathabitat.com/inc/img/~00/photo/~ami-vitale/vitale.2018.sudan-at-ol-pejeta-conservancy.jpg" />
-        <p class="text-right gutter-side"><i>A wildlife ranger comforts Sudan moments before he passed away</i>, Ol Pejeta Conservancy, Kenya (March&nbsp;2018) &copy; Ami Vitale [<a href="../../../url/www/amivitale-goodbye-sudan/" rel="noopener" target="_blank" title="Ami Vitale / The Last Goodbye">amivitale.com</a>]</p>
+        <p class="text-right gutter-side"><i>A wildlife ranger comforts Sudan moments before he passed away</i>, Ol Pejeta Conservancy, Kenya (March&nbsp;2018) &copy; Ami Vitale [<a href="../../../url/-com/amivitale-goodbye-sudan/" rel="noopener" target="_blank" title="Ami Vitale / The Last Goodbye">amivitale.com</a>]</p>
 
       </div>
 
@@ -92,7 +92,7 @@
 
       <div class="clear">
         <img alt="Fatu and Najin graze, Ol Pejeta Conservancy, Kenya (March 2018) &copy; Ami Vitale" src="https://animathabitat.com/inc/img/~00/photo/~ami-vitale/vitale.2018.fatu-and-najin-graze.jpg" />
-        <p class="gutter-side text-right"><i>Fatu and Najin graze</i>, Ol Pejeta Conservancy, Kenya (March 2018) &copy; Ami Vitale [<a href="../../../url/www/amivitale-goodbye-sudan/" rel="noopener" target="_blank" title="Ami Vitale / The Last Goodbye">amivitale.com</a>]</p>
+        <p class="gutter-side text-right"><i>Fatu and Najin graze</i>, Ol Pejeta Conservancy, Kenya (March 2018) &copy; Ami Vitale [<a href="../../../url/-com/amivitale-goodbye-sudan/" rel="noopener" target="_blank" title="Ami Vitale / The Last Goodbye">amivitale.com</a>]</p>
 
       </div>
 
@@ -127,10 +127,10 @@
 
       <div class="quote" id="footnotes">
         <!-- <p class="small"><sup>1</sup> Sam Anderson. The Last Two Northern White Rhinos On Earth: What will we lose when Najin and Fatu die? New York Times. 2021. <a href="../../../url/nytimes/the-last-two-northern-white-rhinos-on-earth/" title="New York Times / The Last Two Northern White Rhinos On Earth" target="_blank" rel="noopener">Website&nbsp;Link</a></p> -->
-        <p class="small"><sup>1</sup> Ami Vitale. The Last Goodbye. 2019. <a href="../../../url/www/amivitale-goodbye-sudan/" title="Ami Vitale / The Last Goodbye" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
+        <p class="small"><sup>1</sup> Ami Vitale. The Last Goodbye. 2019. <a href="../../../url/-com/amivitale-goodbye-sudan/" title="Ami Vitale / The Last Goodbye" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
         <p class="small"><sup>2</sup> Reteti Elephant Sanctuary. <i>Shaba</i>, a short film by Ami Vitale. 2021. <a href="../../../url/-org/shabafilm/" title="Ami Vitale / Shaba (documentary film, 2021)" target="_blank" rel="noopener">Website&nbsp;Link</a></p>
         <p class="small"><sup>3</sup> IUCN Red List. Conservation efforts bring cautious hope for African rhinos. IUCN. March 2020. <a href="../../../url/-org/iucn-conservation-efforts-bring-cautious-hope-african-rhinos/" title="." target="_blank" rel="noopener">Website&nbsp;Link</a></p>
-        <p class="small"><sup>4</sup> Seven Worlds, One Planet. &lsquo;These Two Rhinos Are The Last Of Their Kind.&rsquo; BBC Earth. 2019. <a href="../../../url/yt/Q8eh58Z249o/" title="YouTube / BBC Earth / Seven Worlds, One Planet: These Two Rhinos Are The Last Of Their Kind." target="_blank" rel="noopener">Video&nbsp;Link</a></p>
+        <p class="small"><sup>4</sup> Seven Worlds, One Planet. &lsquo;These Two Rhinos Are The Last Of Their Kind.&rsquo; BBC Earth. 2019. <a href="../../../url/youtube/Q8eh58Z249o/" title="YouTube / BBC Earth / Seven Worlds, One Planet: These Two Rhinos Are The Last Of Their Kind." target="_blank" rel="noopener">Video&nbsp;Link</a></p>
         <p class="small"><sup>4</sup> Seven Worlds, One Planet. &lsquo;Living on the brink&rsquo; BBC Earth. 2019. <a href="../../../url/www/bbcearth-living-on-the-brink/" title="BBC Earth / Seven Worlds, One Planet: Living on the brink." target="_blank" rel="noopener">Website&nbsp;Link</a></p>
 
       </div>
